# CISC3003_Team09_Project

./: .env.cloud-db.example  .env.example  .env.self-host.example  .gitattributes  .gitignore  .project  README.Docker.md  README.md  docker-compose.yml  package-lock.json  package.json  prompt_plan.md  spec.md  todo.md
.cursor/rules/: basic-project-info.mdc
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
alt-frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  tsconfig.json
alt-frontend/public/: auth-ui.js  auth.css  auth.js  chat-ui.js  chat.css  chat.html  chat.js  config.js  index.html  styles.css
alt-frontend/public/js/lib/: auth.js  chat.js
alt-frontend/public/js/pages/: auth-ui.js  chat-ui.js
backend/: Dockerfile  README.md  justfile  main.py  pyproject.toml
backend/src/chatbot_api/: auth.py  config.py  conversation_routes.py  database.py  main.py  openai_client.py  user_routes.py
backend/src/chatbot_api/sql/: user_trigger.sql
backend/supabase/: config.toml
backend/tests/: __init__.py  test_auth.py  test_verify_access.py
deploy/: deploy.sh
docker/: README.md
docker/development/: .env.example  README.md
docker/production/: Caddyfile.example  README.md  docker-compose.yml
frontend/: auth.js  eslint.config.js  index.html  package-lock.json  package.json  test401.html  tsconfig.json
frontend/public/: RL_styles.css  app.js  auth.js  ch_pw.html  ch_pw.js  change_pw.html  chat.js  config.js  history.html  home.html  index.html  localconfig.js  login.html  login.js  profile.html  profile.js  register.html  register.js  reset.html  reset.js  script.js  setting.html  styles.css  test-auth.html  test401.html  tt.css  welcome.css  welcome.html
frontend/public/css/: main.css  styles.css  tt.css  welcome.css
frontend/public/css/base/: _reset.css  _variables.css
frontend/public/css/components/: _alert.css  _auth.css  _buttons.css  _forms.css  _hamburger.css  _history.css  _messages.css  _search-bar.css  _sidebar.css
frontend/public/css/layouts/: _chat.css  _history.css
frontend/public/css/themes/: _dark.css
frontend/public/js/: app.js  auth.js  ch_pw.js  chat.js  config.js  login.js  profile.js  register.js  reset.js  script.js
frontend/public/js/components/: footer.js
frontend/public/js/lib/: chat.js
frontend/public/js/pages/: history-ui.js  home-ui.js  profile-ui.js
supabase/: config.toml
