[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-api"
version = "0.1.0"
description = "Chatbot Website Backend API"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "basedpyright>=1.28.5",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportPropertyTypeMismatch = "error"
reportImportCycles = "information"
reportUntypedFunctionDecorator = "information"
reportUntypedClassDecorator = "information"
reportUntypedBaseClass = "information"
reportUntypedNamedTuple = "information"
reportPrivateUsage = "warning"
reportConstantRedefinition = "information"
reportDeprecated = "information"
reportInconsistentConstructor = "warning"
reportUnknownVariableType = "information"
reportMissingParameterType = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportImplicitOverride = "error"
reportShadowedImports = "error"
reportAny = false
