[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-api"
version = "0.1.0"
description = "Chatbot Website Backend API"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.1",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "basedpyright>=1.28.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "recommended"

# Type checking strictness
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
deprecateTypingAliases = true

# Project structure
include = ["src"]
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = "src/chatbot_api" },
    { root = "tests", extraPaths = ["src"] },
]

# Error reporting
reportMissingImports = "warning"
reportMissingTypeStubs = "information"
reportPropertyTypeMismatch = "error"
reportImportCycles = "information"
reportUnusedCallResult = "none"
reportUntypedFunctionDecorator = "information"
reportUntypedClassDecorator = "information"
reportUntypedBaseClass = "information"
reportUntypedNamedTuple = "information"
reportPrivateUsage = "warning"
reportConstantRedefinition = "information"
reportDeprecated = "information"
reportInconsistentConstructor = "warning"
reportUnknownVariableType = "information"
reportMissingParameterType = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportImplicitOverride = "error"
reportShadowedImports = "error"
reportAny = false
reportCallInDefaultInitializer = false
reportExplicitAny = false
